--- a/MLA_practical/MLA_lab1_HRS_EXAM.ipynb
+++ b/MLA_practical/MLA_lab1_HRS_EXAM.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "TCsJ7j4D4CEf"
       },
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "ISsxb0kA5DMD"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "id": "z-_Rkw5a5pQq",
         "outputId": "a69449e3-58a3-463f-b878-5818972f9876"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,7 @@
       "metadata": {
         "id": "jDldKkAS52y_"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +456,7 @@
       "metadata": {
         "id": "9AMFn4-F6N-X"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
       "metadata": {
         "id": "9lUSbgij7evL"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
         "id": "OAQoqmaZ9TEE",
         "outputId": "87e9362a-c44a-4171-ffbb-6681caf2ac72"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +848,7 @@
         "id": "twaFKqBY9mx3",
         "outputId": "0b7d6cae-fdf1-4aaa-c477-a206e411b555"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1183,7 @@
         "id": "AubiAY8H9pct",
         "outputId": "8b9a9acf-05ce-4066-92d7-57a3b3552e54"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1548,7 +1548,7 @@
         "id": "osjAv0aN-BTj",
         "outputId": "1dcfed80-c537-4dec-9972-c1ae0deb839e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1887,7 +1887,7 @@
       "metadata": {
         "id": "VBf0HPMh-ETn"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1898,7 +1898,7 @@
       "metadata": {
         "id": "ozMOmWfb-Pkc"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1914,7 +1914,7 @@
         "id": "4gplVBno-S_w",
         "outputId": "d1ef9c3b-4be2-47fd-99e7-67ec25f09244"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2354,7 +2354,7 @@
       "metadata": {
         "id": "q-wkoJg7-ZMo"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2369,7 +2369,7 @@
         "id": "yCpUciei-o8C",
         "outputId": "6722c918-242f-4c2e-b015-3e5c16a60937"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2397,7 +2397,7 @@
         "id": "luKazQLP-uhd",
         "outputId": "2ab0287e-30e7-4261-d41d-e177612b9b40"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2741,7 +2741,7 @@
         "id": "4pYRYyRN-zkS",
         "outputId": "5dd1f967-39f6-4a36-ebc1-8b3e56947cfd"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2779,7 +2779,7 @@
         "id": "pe83qO9Y--GW",
         "outputId": "ca015ab6-8d31-4054-a6ab-ce66144cb643"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2804,7 +2804,7 @@
         "id": "Y7aydlOk_Gik",
         "outputId": "8d7c803c-ddb9-4b05-f80d-1b71491c5c80"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2832,7 +2832,7 @@
         "id": "awi9vcV4_8BR",
         "outputId": "7446f8d1-c5f3-4c5c-baec-d034f38658f9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3155,7 +3155,7 @@
         "id": "QD807ImfAHkl",
         "outputId": "ba083f77-13c2-478b-da1f-da3078c4ab7e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3192,7 +3192,7 @@
         "id": "C2T27UGNBQQR",
         "outputId": "0f561b1e-5f46-494f-cda4-5c1d37dbc316"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3219,7 +3219,7 @@
       "metadata": {
         "id": "oOZujRVKBdOa"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3234,7 +3234,7 @@
         "id": "e6QSKrZQB4dp",
         "outputId": "cd2399a6-4acf-43a9-ae5c-25d7e0f87b5b"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3260,7 +3260,7 @@
         "id": "G6o3RWcYCKnI",
         "outputId": "848ae6c1-4a50-46f9-9f45-4c7b6af27f8e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3278,15 +3278,15 @@
       "cell_type": "code",
       "source": [
         "#%%shell\n",
-        "#jupyter nbconvert --to html /content/LinearRegression.ipynb\n",
+        "#jupyter nbconvert --to html /content/MLA_lab1_HRS_EXAM.ipynb.ipynb\n",
         "\n",
         "\n",
-        "#nbconvert to convert the current Jupyter notebook (/content/LinearRegression.ipynb) to an HTML file."
+        "#nbconvert to convert the current Jupyter notebook (/content/MLA_lab1_HRS_EXAM.ipynb.ipynb) to an HTML file."
       ],
       "metadata": {
         "id": "vfegsFPDCrMT"
       },
-      "execution_count": 54,
+      "execution_count": 1,
       "outputs": []
     },
     {
