--- a/MLA_practical/MLA_lab1_HRS_EXAM.ipynb
+++ b/MLA_practical/MLA_lab1_HRS_EXAM.ipynb
@@ -3278,15 +3278,15 @@
       "cell_type": "code",
       "source": [
         "#%%shell\n",
-        "#jupyter nbconvert --to html /content/MLA_lab1_HRS_EXAM.ipynb.ipynb\n",
+        "#jupyter nbconvert --to html /content/MLA_lab1_HRS_EXAM.ipynb\n",
         "\n",
         "\n",
-        "#nbconvert to convert the current Jupyter notebook (/content/MLA_lab1_HRS_EXAM.ipynb.ipynb) to an HTML file."
+        "#nbconvert to convert the current Jupyter notebook (/content/MLA_lab1_HRS_EXAM.ipynb) to an HTML file."
       ],
       "metadata": {
         "id": "vfegsFPDCrMT"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
