--- a/Applied_Data_Science/Practical/ADS_Lab_1_Numpy_and_Pandas_.ipynb
+++ b/Applied_Data_Science/Practical/ADS_Lab_1_Numpy_and_Pandas_.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "yAomsrwcwRLP"
       },
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "qBlVPi66zERf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "5zLhnM3_zxzc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "lXqxbOf50ulY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "id": "Ct71Z20O12KA",
         "outputId": "3b1f7f11-642d-4478-e7d5-e9affe709900"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "1kHT1akn2ED6",
         "outputId": "53c52403-7a40-4344-bbb2-4119f6e5b3ae"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "_jb-lDzx2mRK"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "AEe5bI2J4kG0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "id": "VrmIY5Rl4o37",
         "outputId": "7656a36e-578e-416e-f3b8-d7200d64cff5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
         "id": "2SMHJCXp449L",
         "outputId": "aa4f00e9-8dbc-4c2c-cb3e-a93fb029af32"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
         "id": "CYzYLqHV58l3",
         "outputId": "d6089eee-08ee-4cb6-d0e1-8d5171168d0e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "id": "KM6Om0426LT8",
         "outputId": "65433fb2-be52-402b-83d4-a5dffa6b0b7a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,11 @@
       "cell_type": "code",
       "source": [
         "new_numbers = np.stack((numbers1,numbers2))     # creating a stack\n",
-        "print(\"Stack of two arrays : \\n\",new_numbers)"
+        "print(\"Stack of two arrays : \\n\",new_numbers)\n",
+        "\n",
+        "\n",
+        "# it combines them into a single 2-D array.\n",
+        "# By default, axis=0, so it adds a new dimension at the beginning."
       ],
       "metadata": {
         "colab": {
@@ -358,7 +362,7 @@
         "id": "vV1tsgfq6Tby",
         "outputId": "b691f365-8de3-493f-8f42-1552577b00af"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +388,7 @@
         "id": "9AlT5xWM66Yy",
         "outputId": "99616478-3059-4990-84ce-af6aabb5375e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +422,7 @@
         "id": "xk6tRACs7G08",
         "outputId": "89cd098d-b55f-4d59-876b-fac8c9599de3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +457,7 @@
       "metadata": {
         "id": "WVjh1k378Al5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +493,7 @@
         "id": "r3Ls05En_YwS",
         "outputId": "1124bcee-7180-45d1-d9f0-914a73994f6b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +530,7 @@
         "id": "R01C5KNVCESW",
         "outputId": "bd374e38-6a85-4e80-f643-53b7dd98b2cc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +568,7 @@
         "id": "RgQEGdqJCdms",
         "outputId": "914bb871-0dc9-4022-fdbb-cdb48e08f3a7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +604,7 @@
         "id": "OtMlsiV_DpnY",
         "outputId": "cb43eaca-05ac-46bc-edcf-922a817e8fd2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +642,7 @@
         "id": "O6sxDXkXEaXz",
         "outputId": "e586ff89-a53d-4dca-a3b9-5ee5e7d9740f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +680,7 @@
         "id": "R_K6O6EYFtzG",
         "outputId": "19d0e89b-79ba-499f-c7b0-9f6355f14094"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +718,7 @@
         "id": "tfpwB2zRGZYB",
         "outputId": "b8edc617-78ae-418f-ebe5-46db99a2d203"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +760,7 @@
       "metadata": {
         "id": "NxFX2YS-GyCx"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -768,7 +772,7 @@
       "metadata": {
         "id": "MZvNO8OKKRXu"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +796,7 @@
         "id": "8hpurJFWKfSy",
         "outputId": "a9024253-2725-42b6-ea38-91d4ea842c03"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,7 +854,7 @@
         "id": "PoePP3DmK9d6",
         "outputId": "fdfd5420-0c44-4a60-a13b-94db0bc86f72"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +886,7 @@
         "id": "3sDMRrDCLZBA",
         "outputId": "bdaa47f0-2445-4877-a986-3abc39bcf2f1"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +934,7 @@
         "id": "Bu0-NpDxL6JL",
         "outputId": "fc44c5a8-8c85-42aa-db99-adb846c360f3"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +992,7 @@
         "id": "ljOi3IJqMpic",
         "outputId": "8afee94b-b4a7-4b49-9d95-4f72b5ef5753"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1051,7 @@
         "id": "ohUAfXfDOESp",
         "outputId": "c2c61a76-c318-4e10-9ae9-72fc1bfdbf71"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1084,7 @@
         "id": "6dTWyojPQLLW",
         "outputId": "00e67671-7def-4d15-e384-178761ad1d44"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1117,7 @@
         "id": "WCA6EoRCO1um",
         "outputId": "fa84a4ce-4120-49ab-da59-9ee40117da90"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1152,7 @@
         "id": "SRh4yjtuRUpW",
         "outputId": "f4c9cf59-f5a3-4eee-add8-7089e7e438fe"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1212,7 +1216,7 @@
         "id": "-8Rd69bxScmb",
         "outputId": "f2e6445a-158b-4845-adf9-e06e02239300"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1246,7 +1250,7 @@
         "id": "6v6iVkyZTk6N",
         "outputId": "d8c94754-836e-4b5e-8cf4-e868a02d6d06"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
