--- a/Machine_Learning_Algorithm/Practical/MLA_Assignment_2_Logistic_Regression.ipynb
+++ b/Machine_Learning_Algorithm/Practical/MLA_Assignment_2_Logistic_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZnz7mt9qbYDZuTZrBw2bj",
+      "authorship_tag": "ABX9TyOJbHVn+TcWxbs3dFbQnqfV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# MLA_Assignment_2_Logistic_Regression\n"
+      ],
+      "metadata": {
+        "id": "-8GUkhI72NA_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Import Libraries"
+      ],
+      "metadata": {
+        "id": "CswmyD542P6H"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "6nd96fdfu3Jk"
       },
@@ -43,8 +61,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Load Dataset"
+      ],
+      "metadata": {
+        "id": "Rc4uno-t2T5v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "\n",
         "logi_data = pd.read_csv('/content/2a_logistic_regression_dirty.csv')\n",
         "logi_data.head()"
       ],
@@ -54,9 +82,9 @@
           "height": 206
         },
         "id": "0TG4b93ZwdQf",
-        "outputId": "75ee028c-56c4-4bcb-f736-18a50c5798ba"
+        "outputId": "76680ebf-42aa-4a98-e215-444283a30cc5"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +99,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-854e936d-e8bb-4580-afc7-159e3c97c34b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8f86d868-d2c3-4d5d-b9b4-6a13f7183069\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -144,7 +172,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-854e936d-e8bb-4580-afc7-159e3c97c34b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8f86d868-d2c3-4d5d-b9b4-6a13f7183069')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -196,12 +224,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-854e936d-e8bb-4580-afc7-159e3c97c34b button.colab-df-convert');\n",
+              "        document.querySelector('#df-8f86d868-d2c3-4d5d-b9b4-6a13f7183069 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-854e936d-e8bb-4580-afc7-159e3c97c34b');\n",
+              "        const element = document.querySelector('#df-8f86d868-d2c3-4d5d-b9b4-6a13f7183069');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -221,8 +249,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b16b8542-b4a7-4c19-b441-3fa3ffeeda99\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b16b8542-b4a7-4c19-b441-3fa3ffeeda99')\"\n",
+              "    <div id=\"df-f70e9c03-3c43-4c0e-8ad8-3af335a57e1d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f70e9c03-3c43-4c0e-8ad8-3af335a57e1d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -341,7 +369,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b16b8542-b4a7-4c19-b441-3fa3ffeeda99 button');\n",
+              "            document.querySelector('#df-f70e9c03-3c43-4c0e-8ad8-3af335a57e1d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -358,9 +386,18 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Data Cleaning"
+      ],
+      "metadata": {
+        "id": "zL5tnjdU2gzL"
+      }
     },
     {
       "cell_type": "code",
@@ -373,7 +410,7 @@
       "metadata": {
         "id": "JF-ixRPexDjT"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -390,29 +427,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_y3tL59gxOEn",
-        "outputId": "1161dcb0-bac3-406d-fb87-e3b300c79dec"
+        "outputId": "5288f525-15fb-4b46-86cd-eb37e9236d9c"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-1748089672.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "/tmp/ipython-input-523122053.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  logi_data['Age'].fillna(logi_data['Age'].median(), inplace=True)\n",
-            "/tmp/ipython-input-1748089672.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "/tmp/ipython-input-523122053.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  logi_data['BMI'].fillna(logi_data['BMI'].median(), inplace=True)\n",
-            "/tmp/ipython-input-1748089672.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "/tmp/ipython-input-523122053.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -424,6 +461,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Splitting Input , Output"
+      ],
+      "metadata": {
+        "id": "sTmdfOHx2oPQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# spliting\n",
@@ -433,8 +479,17 @@
       "metadata": {
         "id": "v3GoHefuxTsD"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Training, Testing Data"
+      ],
+      "metadata": {
+        "id": "7Nl_DuI92_EV"
+      }
     },
     {
       "cell_type": "code",
@@ -446,7 +501,7 @@
       "metadata": {
         "id": "jSAsrTmSxgs7"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -458,8 +513,17 @@
       "metadata": {
         "id": "YzBUSdWDxkjF"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##6. Logistic Regression"
+      ],
+      "metadata": {
+        "id": "gY7x6xCi3hA5"
+      }
     },
     {
       "cell_type": "code",
@@ -474,9 +538,9 @@
           "height": 80
         },
         "id": "7ni0tfDoxx4G",
-        "outputId": "1bf0b282-c554-4cdd-c301-78d35151d902"
+        "outputId": "9fd8d92b-b353-4d5e-ac7c-15940345881b"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,9 +968,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7. Prediction and Accuracy"
+      ],
+      "metadata": {
+        "id": "DuO4iqu03S30"
+      }
     },
     {
       "cell_type": "code",
@@ -917,7 +990,7 @@
       "metadata": {
         "id": "cvFVlxlux0nW"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -934,9 +1007,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v0AicERtx2b-",
-        "outputId": "dbec2bc5-ccfb-441e-8565-45c241881535"
+        "outputId": "9062d6a8-35d2-4b48-cee3-3b04253a7517"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
