--- a/Machine_Learning_Algorithm/Practical/MLA_Assignment_2_Logistic_Regression.ipynb
+++ b/Machine_Learning_Algorithm/Practical/MLA_Assignment_2_Logistic_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJbHVn+TcWxbs3dFbQnqfV",
+      "authorship_tag": "ABX9TyNLyzBAJHUvYYCzD9fGOFpi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -485,7 +485,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. Training, Testing Data"
+        "## 5. Training, Testing Data\n",
+        "\n",
+        "-  StandardScaler() : standardizes features by removing the mean and scaling to unit variance\n",
+        "\n",
+        "- fit_transform(X): computes the mean and standard deviation on the dataset X and then scales X so that each feature has a mean of 0 and a standard deviation of 1."
       ],
       "metadata": {
         "id": "7Nl_DuI92_EV"
